--- a/package.json
+++ b/package.json
@@ -3,12 +3,32 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@patternfly/react-core": "^4.221.3",
+    "@progress/kendo-licensing": "^1.2.2",
+    "@progress/kendo-react-dateinputs": "^5.3.0",
+    "@progress/kendo-react-intl": "^5.3.0",
+    "@progress/kendo-theme-default": "^5.4.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "apexcharts": "^3.35.3",
+    "chart.js": "^3.8.0",
+    "daisyui": "^2.15.2",
+    "faker": "^6.6.6",
+    "get-youtube-channel-id": "0.0.4",
+    "heroicons": "^1.0.6",
     "react": "^18.1.0",
+    "react-chart-donut": "^1.0.4",
+    "react-chartjs-2": "^4.2.0",
     "react-dom": "^18.1.0",
+    "react-donut-chart": "^1.3.0",
+    "react-icons": "^4.4.0",
+    "react-player": "^2.10.1",
+    "react-range": "^1.8.12",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "simple-react-donut-chart": "0.0.8",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -34,5 +54,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.7",
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.0.24"
   }
 }
