--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "my-app",
-  "homepage": "https://gitname.github.io/avatarMaking",
+  "homepage": "https://gitname.github.io/avatarMaking/",
   "version": "0.1.0",
   "private": false,
   "dependencies": {
